<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CS496_Project_Mobileapp</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="CreateAcctButtonStr">Create Account</string>
    <string name="LoginButtonStr">Login</string>
    <string name="LogMeInChkBoxStr">Log me in automatically</string>
    <string name="PassTxtStr">Password</string>
    <string name="UsernameTxtStr">Username</string>
    <string name="ConfirmPassTxtStr">Confirm Password</string>
    <string name="FirstName">First Name</string>
    <string name="LastName">Last Name</string>
    <string name="Submit">Submit</string>
    <string name="Logout">Sign Out/Switch to Another User</string>
    <string name="Back">Back to Login</string>
    <string name="MyCourseList">My Courses</string>
    <string name="BackV2">Back</string>
    <string name="CourseTitle">Course Title</string>
    <string name="CourseInfo">Course Info</string>
    <string name="CourseCode">Course Code</string>
    <string name="CourseMeetingTimes">Course Meeting Times</string>
    <string name="CourseNotes">CourseNotes</string>
    <string name="addEventToCalender">Add to Calender</string>
    <string name="viewCourseInfo">View Nofication</string>

</resources>
