<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity" >

    <Button
        android:id="@+id/courseBackButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/BackV2" />

    <TextView
        android:id="@+id/courseTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/courseBackButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="23dp"
        android:text="@string/CourseTitle" />

    <TextView
        android:id="@+id/courseInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/courseBackButton"
        android:layout_below="@+id/courseTitle"
        android:layout_marginTop="31dp"
        android:text="@string/CourseInfo" />

    <TextView
        android:id="@+id/meetingTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/courseInfo"
        android:layout_below="@+id/courseInfo"
        android:layout_marginTop="63dp"
        android:text="@string/CourseMeetingTimes" />

</RelativeLayout>
