<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/usernameTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/UsernameTxtStr" />

    <EditText
        android:id="@+id/usernameTxtBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/usernameTxt"
        android:layout_below="@+id/usernameTxt"
        android:ems="10"
        android:inputType="text" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/passTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/usernameTxtBox"
        android:layout_below="@+id/usernameTxtBox"
        android:text="@string/PassTxtStr" />

    <EditText
        android:id="@+id/passTxtBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/passTxt"
        android:layout_below="@+id/passTxt"
        android:ems="10"
        android:inputType="textPassword" />

    <CheckBox
        android:id="@+id/loginChkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/passTxtBox"
        android:text="@string/LogMeInChkBoxStr" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/loginChkBox"
        android:layout_below="@+id/loginChkBox"
        android:text="@string/LoginButtonStr" />

    <Button
        android:id="@+id/createAcctBut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/loginChkBox"
        android:layout_toRightOf="@+id/loginButton"
        android:text="@string/CreateAcctButtonStr" />

</RelativeLayout>
