<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity" >

    <TextView
        android:id="@+id/passwordTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/createUserNameTxtBox"
        android:text="@string/PassTxtStr" />

    <EditText
        android:id="@+id/createPasswordTxtBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/createUserNameTxtBox"
        android:layout_below="@+id/passwordTxt"
        android:ems="10"
        android:inputType="textVisiblePassword" />

    <TextView
        android:id="@+id/confirmPassTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/createPasswordTxtBox"
        android:text="@string/ConfirmPassTxtStr" />

    <TextView
        android:id="@+id/firstNameTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/passwordTxt"
        android:layout_alignRight="@+id/confirmPassTxt"
        android:layout_below="@+id/confirmPassTxtBox"
        android:text="@string/FirstName" />

    <EditText
        android:id="@+id/createLastNameTxtBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/lastNameTxt"
        android:layout_below="@+id/lastNameTxt"
        android:ems="10"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/createUserNameTxtBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/passwordTxt"
        android:layout_below="@+id/userNameTxt"
        android:ems="10"
        android:inputType="text" />

    <TextView
        android:id="@+id/userNameTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/createUserNameTxtBox"
        android:layout_alignParentTop="true"
        android:text="@string/UsernameTxtStr" />

    <EditText
        android:id="@+id/createFirstNameTxtBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/firstNameTxt"
        android:layout_below="@+id/firstNameTxt"
        android:ems="10"
        android:inputType="textPersonName" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/confirmPassTxtBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/firstNameTxt"
        android:layout_below="@+id/confirmPassTxt"
        android:ems="10"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/lastNameTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/createFirstNameTxtBox"
        android:layout_below="@+id/createFirstNameTxtBox"
        android:text="@string/LastName" />

    <Button
        android:id="@+id/submitCreateUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/createLastNameTxtBox"
        android:text="@string/Submit" />

    <Button
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/createLastNameTxtBox"
        android:layout_toRightOf="@+id/lastNameTxt"
        android:text="@string/Back" />

</RelativeLayout>
